fixed whitespace

--- a/src/sass/contact.scss
+++ b/src/sass/contact.scss
@@ -59,7 +59,7 @@ header {
 				// align-items: flex-start;
 				i {
 					width: 27px;
-					margin-right: 0.5em;
+					margin-right: 0.75em;
 					font-size: 2.4rem;
 					text-align: center;
 				}
