--- a/src/sass/experience.scss
+++ b/src/sass/experience.scss
@@ -82,7 +82,7 @@ header {
 	// EXPERIENCE
 
 	.experience {
-		padding-top: 2em;
+		padding-top: 3em;
 
 		&__text {
 			text-align: left;
