--- a/src/sass/faq.scss
+++ b/src/sass/faq.scss
@@ -61,7 +61,7 @@ header {
 
 			&-img {
 				width: 100%;
-				height: 200px;
+				// height: 200px;
 				margin-bottom: 1em;
 			}
 
@@ -82,7 +82,6 @@ header {
 				}
 			}
 		}
-		
 	}
 }
 
@@ -99,13 +98,13 @@ header {
 	}
 
 	&-paragraph {
-		margin-bottom: 1em;
+		margin-bottom: 1.5em;
 		line-height: 1.5em;
 	}
 
 	&-img {
 		width: 100%;
-		margin-bottom: 1em;
+		margin-bottom: 2em;
 	}
 
 	&__list {
@@ -122,7 +121,7 @@ header {
 			}
 		}
 	}
-	
+
 	&__backlink {
 		display: block;
 		margin: 1em auto;
@@ -157,11 +156,11 @@ header {
 	//FAQ
 
 	.faq {
-		padding-top: 2em;
+		padding-top: 3em;
 		&__articles {
 			&box {
-				max-width: 70%;
-				margin: 0.5em 0.5em;
+				max-width: 60%;
+				margin: 0.75em 0.5em;
 			}
 		}
 	}
@@ -182,14 +181,14 @@ header {
 			&box {
 				display: grid;
 				grid-template-columns: 1fr;
-				grid-template-rows: 0.75fr repeat(2, 2fr) 0.75fr;
+				grid-template-rows: 0.5fr 2fr 1.5fr 0.5fr;
 				width: 45%;
-				min-height: 670px;
-				margin: 2em 1em;
+				min-height: 700px;
+				margin: 1em;
 				padding: 2em;
 
 				&-head {
-					margin-bottom: 1.5em;
+					margin-bottom: 1em;
 				}
 			}
 		}
@@ -206,7 +205,7 @@ header {
 			// flex-wrap: nowrap;
 			&box {
 				width: 30.5%;
-				min-height: 670px;
+				min-height: 680px;
 				&-head {
 					margin-bottom: 1em;
 				}
