--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -232,7 +232,7 @@ header {
 						font-weight: 200;
 						text-transform: uppercase;
 						text-align: right;
-						
+
 						strong {
 							font-weight: 400;
 						}
@@ -253,8 +253,8 @@ header {
 
 		&__box {
 			@include mix.flex-center(column);
-			padding-top: 1.5em;
-			padding-bottom: 1.5em;
+			padding-top: 2em;
+			padding-bottom: 2em;
 
 			&-desktophead {
 				display: none;
@@ -301,7 +301,7 @@ header {
 
 	&__box {
 		@include mix.flex-center(column);
-		margin: 1em auto 1.5em;
+		margin: 1.5em auto 1.5em;
 
 		&es {
 			@include mix.section-box;
@@ -331,6 +331,7 @@ header {
 	}
 
 	&__citybox {
+		padding-top: 1em;
 		padding-bottom: 1em;
 		color: c.$whiteText;
 		&-text {
@@ -364,11 +365,11 @@ header {
 	}
 
 	&__adress {
-		margin-bottom: 1em;
+		margin-bottom: 1.5em;
 		line-height: 1.5em;
 
 		&__company-name-h4 {
-			margin-bottom: 0.25em;
+			margin-bottom: 0.75em;
 			font-size: 1.8rem;
 			font-weight: 400;
 		}
@@ -392,7 +393,7 @@ header {
 	}
 
 	&__contact {
-		margin: 2em auto 1em;
+		margin: 2em auto 1.5em;
 		line-height: 1.5em;
 
 		&__head {
@@ -405,7 +406,7 @@ header {
 		&-phone {
 			@include mix.flex-start(row);
 			// align-items: flex-start;
-			margin-bottom: 0.25em;
+			margin-bottom: 0.75em;
 			line-height: 1.5em;
 
 			i {
@@ -433,7 +434,7 @@ header {
 
 	&__mapsite,
 	&__service {
-		margin: 1em auto 1em;
+		margin: 1em auto 1.5em;
 		line-height: 1.5em;
 		&__head {
 			margin-bottom: 0.5em;
@@ -458,7 +459,7 @@ header {
 	}
 
 	&__date {
-		margin: 0.5em auto;
+		margin: 1em auto 0.5em;
 		text-align: center;
 		font-weight: bold;
 	}
@@ -500,7 +501,7 @@ header {
 
 				&--mobile {
 					width: 50%;
-					top: 47%;
+					top: 43%;
 					right: 3em;
 
 					&-head {
@@ -533,6 +534,9 @@ header {
 
 	.aboutus {
 		padding-top: 2em;
+		&__text {
+			padding-bottom: 1.5em;
+		}
 		&__box {
 			@include mix.flex-center(column);
 			// flex-wrap: wrap;
@@ -541,7 +545,8 @@ header {
 			&es {
 				@include mix.flex-center(column);
 				max-width: 50%;
-				margin: 0.5em 0.5em;
+				margin: 0.75em 0.75em;
+				padding: 2em;
 			}
 		}
 	}
@@ -551,13 +556,12 @@ header {
 	.footer {
 		@include mix.flex-center(row);
 		flex-wrap: wrap;
-		padding: 1em 2.5em;
+		padding: 1.5em 2.5em;
 
 		&__adress,
 		&__contact,
 		&__service,
 		&__mapsite {
-			
 			flex-basis: 50%;
 			align-self: start;
 		}
@@ -625,7 +629,7 @@ header {
 					padding: 0.75em;
 
 					&-link {
-						font-size: 1.6rem;
+						font-size: 1.5rem;
 						// font-weight: 400;
 						color: c.$whiteText;
 					}
@@ -659,7 +663,6 @@ header {
 		.header {
 			position: relative;
 			@include mix.flex-center(row);
-			
 
 			&__hero-img {
 				width: 100%;
@@ -725,8 +728,8 @@ header {
 				display: grid;
 				grid-template-rows: 1fr 2fr;
 				width: 33%;
-				min-height: 370px;
-				margin: 2em 1.25em;
+				min-height: 335px;
+				margin: 1em 0.75em;
 				padding: 2em;
 
 				&:first-child {
@@ -737,7 +740,7 @@ header {
 				}
 
 				&__head {
-					margin-bottom: 1.5em;
+					margin-bottom: 0.75em;
 
 					&-header {
 						font-size: 2.2rem;
@@ -806,6 +809,14 @@ header {
 		.navbar {
 			right: calc((100vw - 1200px) / 2);
 			// padding-right: 0;
+
+			&__list {
+				&__elements {
+					&-link {
+						font-size: 1.6rem;
+					}
+				}
+			}
 		}
 	}
 
@@ -831,8 +842,10 @@ header {
 		&__box {
 			@include mix.flex-space(row);
 			&es {
+				min-height: 275px;
+				margin: 1em 1.5em;
 				&__head {
-					margin-bottom: 2em;
+					margin-bottom: 1em;
 				}
 			}
 		}
